--- a/作业二/作业二.html
+++ b/作业二/作业二.html
@@ -58,7 +58,7 @@
 <body>
     <form action="">
         <input type="search" name="search0" id="text" placeholder="请输入想找的商品" autofocus="autofocus">
-        <input type="submit" value="搜索" id="addButton"/>
+        <input type="submit" name="submit0" value="搜索" id="addButton"/>
     </form>
     <div id="new">最近搜索</div>
     <div id="big"></div>
