--- a/作业四/作业四.html
+++ b/作业四/作业四.html
@@ -57,6 +57,8 @@
             font-size: 20px;
             color: rgb(163, 162, 162);
             opacity: 0;
+            transition-property: opacity;
+            transition-duration: 1s;
         }
         #h22{
             margin-left: 20px;
