--- a/作业四/作业四.html
+++ b/作业四/作业四.html
@@ -116,6 +116,8 @@
         }
         #biggest:hover{
             box-shadow: 7px 7px 0px 2px rgb(199, 196, 196);
+            transition-property: all;
+            transition-duration: 1s; 
         }
     </style>
 </head>
